namespace Biosearcher.Buildings.Resources.Interfaces
{
    public interface IAddable<TResource>
    {
        public TResource Add(TResource a);
    }
}
